--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ on:
   [workflow_call]
 jobs:
   Build:
-    runs-on: [self-hosted,ubuntu-latest]
+    runs-on: [ubuntu-latest]
     steps:
       - name: checkout code
         uses: actions/checkout@v4
