--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,3 +7,16 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v4
+      - run: echo Build
+  Test: 
+    runs-on: [ubuntu-latest]
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v4
+      - run: echo Test
+  Deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v4
+      - run: echo deploy
