--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,12 +9,14 @@ jobs:
         uses: actions/checkout@v4
       - run: echo Build
   Test: 
+    needs: Build
     runs-on: [ubuntu-latest]
     steps:
       - name: checkout code
         uses: actions/checkout@v4
       - run: echo Test
   Deploy:
+    needs: Test
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
