--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,15 +7,15 @@ on:
         type: string
 jobs:
   Build:
-    runs-on: [ubuntu-latest]
+    runs-on: [self-hosted]
     steps:
       - name: checkout code
         uses: actions/checkout@v4
       - run: echo Build
-      
+
   Test: 
     needs: Build
-    runs-on: [ubuntu-latest]
+    runs-on: [self-hosted]
     steps:
       - name: checkout code
         uses: actions/checkout@v4
@@ -23,7 +23,7 @@ jobs:
 
   Dev-Deployment:
     needs: Test
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: checkout code
         uses: actions/checkout@v4
