--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -1,4 +1,4 @@
-name: common ci
+name: common ci pr
 on:
   workflow_call:
     inputs:
@@ -6,7 +6,7 @@ on:
         required: true
         type: string
 jobs:
-  Build:
+  Download-Dependencies:
     runs-on: [self-hosted]
     steps:
       - name: checkout code
@@ -14,13 +14,21 @@ jobs:
       - run: echo Build
 
   Test: 
-    needs: Build
+    needs: Download-Dependencies
     runs-on: [self-hosted]
     steps:
       - name: checkout code
         uses: actions/checkout@v4
       - run: echo Test
 
+  DockerBuild-n-Push:
+    runs-on: self-hosted
+    needs: Test
+    steps:
+      - name: check out repo code
+        uses: actions/checkout@v4
+      - run: echo Test
+      
   Dev-Deployment:
     needs: Test
     runs-on: self-hosted
